--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
                         <div class="info-value placeholder">[City], [State], [Zip]</div>
                     </div>
                     <div class="info-line">
-                        <div class="info-label">Primary Cell</div>
+                        <div class="info-label">Phone Numberl</div>
                         <div class="info-value placeholder">[Primary Cell]</div>
                     </div>
                     <div class="info-line">
-                        <div class="info-label">Primary Email</div>
+                        <div class="info-label">Email Address</div>
                         <div class="info-value placeholder">[Primary Email]</div>
                     </div>
                 </div>
@@ -395,7 +395,7 @@
         <div class="balance-section">
             <div class="balance-header">Balance Summary</div>
             <div class="balance-row">
-                <span>Previous Balance Amount</span>
+                <span>Previous Balance</span>
                 <span class="amount">$[Amount Previously Invoiced]</span>
             </div>
             <div class="balance-row">
@@ -458,6 +458,16 @@
                     <span>Total Amount Due</span>
                     <span class="amount">$202.98</span>
                 </div>
+            </div>
+        </div>
+        
+         <!-- Promotional Message -->
+        <div class="promotional-section">
+            <div class="promo-icon">❤️</div>
+            <h3 class="promo-title">Love Hannah? Share Hannah.</h3>
+            <div class="promo-content">
+                <p>Refer a friend who enrolls, and you'll receive <strong>one FREE month</strong> of Total Lifetime Care™ for one of your Pets.</p>
+                <p class="promo-tagline">Because great care is better together.</p>
             </div>
         </div>
         
