--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         }
         
         .section-header:after {
-            content: '';
+            content:;
             position: absolute;
-            left: 0;
+            center: 0;
             bottom: -2px;
             width: 80px;
             height: 2px;
