--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         }
         
         .balance-header:before {
-            content: '';
+            content:;
             color: #3498db;
             font-size: 24px;
             margin-right: 10px;
