--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         
         /* Balance Section */
         .balance-section {
-            background: linear-gradient(135deg, #f8fafc 0%, #51b5e0 100%);
+            background color: #51b5e0 100%);
             border: 1px solid #dbe4ed;
             border-radius: 8px;
             padding: 25px;
